--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
   </div>
 
   <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado."</p>
-  <p>&copy; Equipo 💚 Cristo Vive Multimedia Confidencial, V10</p>
+  <p>&copy; Equipo 💚 Cristo Vive Multimedia Confidencial, V11 Estable</p>
 
   <div>
     <button id="print-button">Imprimir Organización Semanal</button>
