--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     header {
       text-align: center;
-      background: linear-gradient(to right, #ff9a9e, #fad0c4);
+      background-color: #ff9a9e;
     }
     
     header svg {
@@ -90,6 +90,32 @@
       from { transform: rotate(0deg); }
       to { transform: rotate(360deg); }
     }
+
+    /* Futuristic table style */
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      font-family: Arial, sans-serif;
+    }
+
+    table td, table th {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: center;
+      transition: background-color 0.3s ease;
+    }
+
+    table th {
+      background-color: #f2f2f2;
+    }
+
+    table td {
+      background-color: #ffffff;
+    }
+
+    table td:hover {
+      background-color: #f8f8f8;
+    }
   </style>
 </head>
 <body>
@@ -97,7 +123,7 @@
     <img src="https://i.ibb.co/YLLzsJ8/tcvl-121x107.webp" alt="tcvl-121x107" border="0">
   </header>
 
-  <h1>Organización Semanal - Cristo Vive</h1>
+  <h1 style="background-color: #ff9a9e; padding: 10px;">Organización Semanal - Cristo Vive</h1>
   <h2>Responsabilidades de Líderes de la Iglesia Cristo Vive</h2>
 
   <div class="table-responsive">
