--- a/index.html
+++ b/index.html
@@ -72,12 +72,21 @@
 
     /* Background color */
     body {
-      background-color: #92fe9d;
+      background-color: #d7e5e7;
     }
 
-    /* Loading movements */
-    .spinner {
-      display: inline-block;
+    /* Loading progress */
+    .progress-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .progress {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       width: 50px;
       height: 50px;
       border: 3px solid rgba(0, 0, 0, 0.3);
