En la versión V12 Estable del código, realicé los siguientes cambios y mejoras:
Agregué un encabezado con el logotipo de "Cristo Vive"
para identificar visualmente el documento.
Modifiqué el estilo del encabezado principal, resaltándolo
con un fondo de color y un espacio de padding.
Creé una tabla para mostrar las responsabilidades de los líderes
 de la iglesia durante la semana.
Agregué encabezados a las columnas de la tabla para indicar los días
de la semana.
Creé celdas editables en la tabla para ingresar los datos
correspondientes a cada responsabilidad y día de la semana.
Agregué un pie de página con la fecha de generación del archivo.
Agregué un botón de impresión para permitir la impresión del documento.
Añadí una marca de agua en la esquina inferior derecha del documento.
Implementé una ventana emergente modal para ingresar los datos en las
 celdas de la tabla. Esto se activa al hacer clic en una celda editable.
Implementé la funcionalidad de guardar los datos ingresados en la
ventana modal y mostrarlos en la celda correspondiente.
Resalté la celda activa y le quité el resaltado al perder el foco.
Agregué estilos y efectos visuales usando Materialize CSS para
mejorar la apariencia y la experiencia del usuario.
Añadí una barra de progreso para simular la carga inicial de la página
y mostrarla durante unos segundos.
Implementé la funcionalidad del botón de impresión para ocultar el
botón y la marca de agua durante la impresión, y luego mostrarlos
nuevamente.
Realicé ajustes en los estilos y el diseño para mejorar la legibilidad
 y la presentación general del documento.

--- a/index.html
+++ b/index.html
@@ -125,6 +125,23 @@
     table td:hover {
       background-color: #f8f8f8;
     }
+
+    /* Custom styles */
+    .watermark {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 48px;
+      font-weight: bold;
+      color: rgba(0, 0, 0, 0.1);
+      pointer-events: none;
+      z-index: -1;
+    }
   </style>
 </head>
 <body>
@@ -205,7 +222,7 @@
   </div>
 
   <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado."</p>
-  <p>&copy; Equipo 💚 Cristo Vive Multimedia Confidencial, V11 Estable</p>
+  <p>&copy; Equipo 💚 Cristo Vive Multimedia Confidencial, V12 Estable</p>
 
   <div>
     <button id="print-button" class="custom-button">Imprimir Organización Semanal</button>
@@ -225,6 +242,10 @@
     <div class="modal-footer">
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Guardar</a>
     </div>
+  </div>
+
+  <div class="progress-wrapper">
+    <div class="progress"></div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -283,6 +304,16 @@
       window.print();
       printButton.style.display = 'block';
       watermark.style.display = 'block'; // Show the watermark again after printing
+    });
+
+    // Show loading spinner on page load
+    document.addEventListener('DOMContentLoaded', function() {
+      var progressWrapper = document.querySelector('.progress-wrapper');
+      progressWrapper.style.display = 'flex';
+
+      setTimeout(function() {
+        progressWrapper.style.display = 'none';
+      }, 2000);
     });
   </script>
 </body>
