En este código corregido, se ha agregado un contenedor div con el id "myDiv" alrededor del contenido de la página. Este div se oculta inicialmente con el estilo display: none;. Luego, en el evento window.load, se oculta el loader y se muestra el contenido es tableciendo loader.style.display = "none"; y content.style.display = "block";, respectivamente.

--- a/index.html
+++ b/index.html
@@ -175,9 +175,14 @@
       pointer-events: none;
       z-index: -1;
     }
+        /* Nuevos estilos para mostrar el contenido después de la carga */
+        #myDiv {
+      display: none;
+    }
   </style>
 </head>
 <body>
+  <div id="myDiv">
   <header>
     <img src="https://i.ibb.co/YLLzsJ8/tcvl-121x107.webp" alt="tcvl-121x107" border="0">
   </header>
@@ -342,6 +347,7 @@
       var content = document.getElementById("myDiv");
       setTimeout(function() {
         loader.classList.add("animate-bottom");
+        loader.style.display = "none";
         content.style.display = "block";
       }, 2000);
     });
