Correcion de colores

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     header {
       text-align: center;
-      background-color: #f2f2f2;
+      background-color: #d7e5e7;
     }
     
     header svg {
@@ -52,7 +52,7 @@
     }
 
     .highlight {
-      background-color: #ffeeba !important;
+      background-color: #e67c52 !important;
     }
 
     /* Improved button styling */
@@ -104,7 +104,7 @@
   width: 120px;
   height: 120px;
   margin: -60px 0 0 -60px;
-  border: 16px solid #f3f3f3;
+  border: 16px solid #ff0000;
   border-radius: 50%;
   border-top: 16px solid #3498db;
   animation: spin 2s linear infinite;
@@ -187,7 +187,7 @@
     <img src="https://i.ibb.co/YLLzsJ8/tcvl-121x107.webp" alt="tcvl-121x107" border="0">
   </header>
 
-  <h1 style="background-color: #ffffff; padding: 10px;">Organización Semanal - Cristo Vive</h1>
+  <h1 style="background-color: #d7e5e7; padding: 10px;">Organización Semanal - Cristo Vive</h1>
   <h2>Responsabilidades de Líderes de la Iglesia Cristo Vive</h2>
 
   <div class="table-responsive">
