--- a/index.html
+++ b/index.html
@@ -258,13 +258,14 @@
   <div class="footer">
     <p>Fecha del archivo generado: <span id="today"></span></p>
   </div>
+  <p style="font-size: 12px; opacity: 0.5; text-align: center;">Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
+  <p style="font-size: 12px; opacity: 0.5; text-align: center;">&copy; Equipo 💚 Cristo Vive Multimedia Confidencial, V12 Estable</p>
+</div>
 
-  <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado."</p>
-  <p>&copy; Equipo 💚 Cristo Vive Multimedia Confidencial, V12 Estable</p>
+<div class="text-center">
+  <button id="print-button" class="custom-button">Imprimir Organización Semanal</button>
+</div>
 
-  <div>
-    <button id="print-button" class="custom-button">Imprimir Organización Semanal</button>
-  </div>
 
   <div class="watermark">Iglesia Cristo Vive</div>
 
