se movió la parte del texto "Fecha del archivo generado" fuera de la etiqueta <span>. Esto permitirá que el valor de la fecha se inserte correctamente dentro del elemento <span id="today"></span> utilizando JavaScript en tu código.

--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
   </div>
 
   <div class="footer">
-    <p>Fecha del archivo generado: <span id="today"></span></p>
-  </div>
+    <p style="font-size: 12px; opacity: 0.5; text-align: center;">Fecha del archivo generado: <span id="today"></span></p>
+</div>
   <p style="font-size: 12px; opacity: 0.5; text-align: center;">Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
   <p style="font-size: 12px; opacity: 0.5; text-align: center;">&copy; Equipo 💚 Cristo Vive Multimedia Confidencial, V12 Estable</p>
   <div>
