--- a/index.html
+++ b/index.html
@@ -270,7 +270,8 @@
 </div>
   <p style="font-size: 12px; opacity: 0.5; text-align: center;">Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
   <p style="font-size: 12px; opacity: 0.5; text-align: center;">&copy; Equipo 💚 Cristo Vive Multimedia Confidencial, V12 Estable</p>
-  <div>
+  
+  <div style="display: flex; justify-content: center;">
     <button id="print-button" class="custom-button hide-on-load">Imprimir Organización Semanal</button>
   </div>
 
