--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
     }
 
    /* Estilos para la carga inicial */
-#loader {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  z-index: 1;
-  width: 120px;
-  height: 120px;
-  margin: -60px 0 0 -60px;
-  border: 16px solid #ff0000;
-  border-radius: 50%;
-  border-top: 16px solid #3498db;
-  animation: spin 2s linear infinite;
-}
+   #loader {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      z-index: 1;
+      width: 120px;
+      height: 120px;
+      margin: -60px 0 0 -60px;
+      border: 16px solid #3498db; /* Cambio de color de borde a azul */
+      border-radius: 50%;
+      border-top: 16px solid #3498db;
+      animation: spin 2s linear infinite;
+    }
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
