--- a/index.html
+++ b/index.html
@@ -213,49 +213,49 @@
       </thead>
       <tbody>
         <tr>
-          <td class="center-align"><strong>Fecha del Servicio</strong></td>
+          <td class="center-align">Fecha del Servicio</td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
         </tr>
         <tr>
-          <td class="center-align"><strong>Dirige</strong></td>
+          <td class="center-align">Dirige</td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
         </tr>
         <tr>
-          <td class="center-align"><strong>Alabanza & Adoración</strong></td>
+          <td class="center-align">Alabanza & Adoración</td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
         </tr>
         <tr>
-          <td class="center-align"><strong>Meditación de la Palabra</strong></td>
+          <td class="center-align">Meditación de la Palabra</td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
         </tr>
         <tr>
-          <td class="center-align"><strong>Actividad adicional</strong></td>
+          <td class="center-align">Actividad adicional</td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
         </tr>
         <tr>
-          <td class="center-align"><strong>Actividad extraordinaria</strong></td>
+          <td class="center-align">Actividad extraordinaria</td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
         </tr>
         <tr>
-          <td class="center-align"><strong>Horario</strong></td>
+          <td class="center-align">Horario</td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
           <td class="editable-cell"></td>
@@ -263,8 +263,6 @@
         </tr>
       </tbody>
     </table>
-</div>
-
   </div>
 
   <div class="footer">
