Ahora podrás editar el contenido de las celdas simplemente haciendo clic en ellas y escribiendo el nuevo contenido. Asegúrate de ajustar los estilos CSS y las funciones JavaScript según sea necesario para mantener la funcionalidad deseada.

--- a/index.html
+++ b/index.html
@@ -214,52 +214,52 @@
       <tbody>
         <tr>
           <td class="center-align">Fecha del Servicio</td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
         </tr>
         <tr>
           <td class="center-align">Dirige</td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
         </tr>
         <tr>
           <td class="center-align">Alabanza & Adoración</td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
         </tr>
         <tr>
           <td class="center-align">Meditación de la Palabra</td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
         </tr>
         <tr>
           <td class="center-align">Actividad adicional</td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
         </tr>
         <tr>
           <td class="center-align">Actividad extraordinaria</td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
         </tr>
         <tr>
           <td class="center-align">Horario</td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
-          <td class="editable-cell"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
+          <td class="editable-cell" contenteditable="true"></td>
         </tr>
       </tbody>
     </table>
