En este código, se agrega una nueva fila (<tr>) que contiene una sola celda (<td>) con el atributo colspan="5", lo que indica que esta celda ocupará el ancho completo de la tabla (en este caso, 5 columnas). La clase CSS "center-align" se utiliza para centrar el texto en la celda.

--- a/index.html
+++ b/index.html
@@ -213,6 +213,9 @@
       </thead>
       <tbody>
         <tr>
+          <td colspan="5" class="center-align">Actividades</td>
+        </tr>
+        <tr>
           <td class="center-align">Fecha del Servicio</td>
           <td class="editable-cell" contenteditable="true"></td>
           <td class="editable-cell" contenteditable="true"></td>
