--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
             <td colspan="5" class="center-align">Actividades</td>
           </tr>
           <th></th>
+          <th class="center-align">Lista de Responsabilidades</th>
           <th class="center-align">Martes</th>
           <th class="center-align">Viernes</th>
           <th class="center-align">Sábado</th>
